@@ -8,6 +8,7 @@ Proj 4.9+ required.
 
  - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)
  - #5829, geometry_columns with non-standard constraints (Paul Ramsey)
+ - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
 
 
 PostGIS 3.3.8
